--- a/.github/workflows/run-digest-sender.yml
+++ b/.github/workflows/run-digest-sender.yml
@@ -2,7 +2,7 @@ name: Send Digests
 
 on:
   schedule:
-    - cron: "0 11 * * *" # Runs daily at 11AM UTC
+    - cron: "0 14 * * *" 
   workflow_dispatch: # Enables manual trigger
   
 permissions:
